Fix focus for sticky elements

As per discussion in the associated bug, we call
EnsurePaintLocationDataValidForNode, which ensures that the document
lifecycle is advanced to kCompositingInputsClean for sticky elements in
order to correctly calculate its position.

Bug: 850380
Change-Id: I27665028393cee6f330fda747b4a344e994fe8fe
Reviewed-on: https://chromium-review.googlesource.com/1231378
Reviewed-by: Kent Tamura <tkent@chromium.org>
Commit-Queue: Adithya Srinivasan <adithyas@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592440}
Former-commit-id: e1aa11528e75bad7d7676d44970338a8e1c12a6b